--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <script>
     alert("hello, world!");
+    console.log("This page contains a friendly greeting.");
   </script>
 </head>
 
