--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script>
     alert("hello, world!");
     console.log("This page contains a friendly greeting.");
+    var firstName = "Irvin";
+    var lastName = "Torterat";
+    console.log(`My full name is ${firstName} ${lastName}.`)
   </script>
 </head>
 
