--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <title>Learn Enough JavaScript</title>
   <meta charset="utf-8">
   <script>
-    alert("hello, world!");
-    console.log("This page contains a friendly greeting.");
-    var firstName = "Irvin";
-    var lastName = "Torterat";
-    console.log(`My full name is ${firstName} ${lastName}.`)
+    const daysOfTheWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+    let now = new Date();
+    let dayName = daysOfTheWeek[now.getDay()];
+    alert(`Hello, world! Happy ${dayName}.`);
   </script>
 </head>
 
