--- a/palindrome.html
+++ b/palindrome.html
@@ -10,7 +10,10 @@
 <body>
   <h1>Palindrome Tester</h1>
 
-  <button id="palindromeTester">Test palindrome</button>
+  <form id="palindromeTester">
+    <textarea name="phrase" rows="10" cols="30"></textarea> <br>
+    <button type="submit">Is it a palindrome?</button>
+  </form>
 
   <h2>Result</h2>
 
